--- a/styleHP.css
+++ b/styleHP.css
@@ -1,3 +1,22 @@
+body {
+    position: relative;
+    margin: 0;
+}
+
+header {
+    font-size: 24px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    display: inline-block;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 50px;
+    color: white;
+    background-color: rgba(240, 248, 255, 0.3);
+    z-index: 1;
+}
+
 a:link {
     color: azure;
 }
@@ -10,7 +29,7 @@ a:hover {
     color: rgb(127, 197, 255);
 }
 
-#pic {
+.pic {
     margin-top: 50px;
     width: 150px;
     height: 150px;
@@ -46,9 +65,10 @@ a:hover {
 }
 
 .container {
+    position: absolute;
+    top: 80px;
     display: inline-flex;
     flex-wrap: wrap;
-    border: 1px solid black;
 }
 
 .flex-direction {
@@ -57,13 +77,14 @@ a:hover {
 
 .div2 {
     border-width: 1px;
+    border-bottom: 3px;
     border-color: white;
     border-style: solid;
     border-radius: 50px;
     width: 550px;
     height: 350px;
     padding: 20px;
-    padding-left: 80px;
+    padding-left: 50px;
 }
 
 .divLeft {
@@ -83,7 +104,7 @@ a:hover {
 }
 
 .divLeft3 {
-    margin-top: 70px;
+    margin-top: 50px;
     margin-left: 170px;
     border-width: 1px;
     border-style: solid;
@@ -98,4 +119,12 @@ a:hover {
 .fontDiv02 {
     color: white;
     padding-top: 20px;
+}
+
+.goTo {
+    display: inline;
+    color: black;
+    background-color: white;
+    margin-left: 10px;
+    margin-right: 10px;
 }
